--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -526,7 +526,7 @@
 		<label index="unknown">n/a</label>
 	</labels>
 	<labels lang="sr_RS">
-		<label index="tab.todoyu.label">тодоју</label>
+		<label index="tab.todoyu.label">todoyu</label>
 		<label index="yes">Да</label>
 		<label index="no">Не</label>
 		<label index="loading">Учитавање</label>
@@ -535,23 +535,23 @@
 		<label index="title">Наслов</label>
 		<label index="description">Опис</label>
 		<label index="date">Датум</label>
-		<label index="quickcreate.title">Створити</label>
+		<label index="quickcreate.title">Креирај ново</label>
 		<label index="quickcreate.alltypes.label">Све врсте податка:</label>
-		<label index="create">Створити</label>
-		<label index="createNew">Створити ново</label>
-		<label index="edit">Уредити</label>
-		<label index="load">Учитава</label>
-		<label index="save">Сачувати</label>
-		<label index="cancel">Прекинути</label>
-		<label index="delete">Обрисати</label>
+		<label index="create">Креирај</label>
+		<label index="createNew">креирати ново:</label>
+		<label index="edit">Уреди</label>
+		<label index="load">Учитаваj</label>
+		<label index="save">Сачувај</label>
+		<label index="cancel">Прекини</label>
+		<label index="delete">Обриши</label>
 		<label index="deleteRecord">Обриши унос</label>
-		<label index="show">Показати</label>
-		<label index="hide">Сакрити</label>
-		<label index="unhide">Одкрити</label>
-		<label index="rename">Преименовати</label>
-		<label index="reset">Ресетовати</label>
-		<label index="update">Ажурирати</label>
-		<label index="search">Претражити</label>
+		<label index="show">Покажи</label>
+		<label index="hide">Сакриј</label>
+		<label index="unhide">Одкриј</label>
+		<label index="rename">Преимењуј</label>
+		<label index="reset">Ресетуј</label>
+		<label index="update">Ажурирај</label>
+		<label index="search">Претражи</label>
 		<label index="back">Назад</label>
 		<label index="filter">Филтер</label>
 		<label index="type">Тип</label>
@@ -561,11 +561,11 @@
 		<label index="status">Статус</label>
 		<label index="what">Шта</label>
 		<label index="where">Где</label>
-		<label index="when">Кад</label>
+		<label index="when">Одкад</label>
 		<label index="until">Докад</label>
 		<label index="private">Приватно</label>
-		<label index="start">Стартовати</label>
-		<label index="stop">Зауставити</label>
+		<label index="start">Крени</label>
+		<label index="stop">Стоп</label>
 		<label index="end">Крај</label>
 		<label index="beginning">Почетак</label>
 		<label index="deadline">Рок</label>
@@ -574,12 +574,12 @@
 		<label index="close">Затвори</label>
 		<label index="noAccess.pageTitle">Нема приступа</label>
 		<label index="noAccess.goBackToLastPage">Врати се на последњу страницу</label>
-		<label index="noAccess.contactAdmin">Опс! Ако мислите да вам треба приступ, предајте вашем тодоју администратору следеће податке:</label>
+		<label index="noAccess.contactAdmin">Опс! Ако мислите да вам треба приступ, предајте вашем todoyu администратору следеће податке:</label>
 		<label index="noAccess.requestURL">Захтевај УРЛ</label>
-		<label index="noAccess.missingRight">Недостаје вам прав</label>
+		<label index="noAccess.missingRight">Недостаје вам право</label>
 		<label index="footer.version">Верзија</label>
 		<label index="footer.bugreport">Јавите грешку</label>
-		<label index="footer.bugreport.title">Користите трагач грешких тодоју-а на bugs.todoyu.com да додате грешку</label>
+		<label index="footer.bugreport.title">Користите трагач грешких todoyu-а на bugs.todoyu.com да додате грешку</label>
 		<label index="footer.forum">Дискусија у форум-у</label>
 		<label index="footer.forum.title">Нађите грешку или поделите ваше идеје</label>
 		<label index="footer.usermanual">Упутство</label>
@@ -592,12 +592,12 @@
 		<label index="input.autocompleter">Запамти унос</label>
 		<label index="ajax.requestFailed">Не може се повезати са сервером (Веза и сервер у функцији?)</label>
 		<label index="attr.is_active">Активно</label>
-		<label index="roles">Уллоге</label>
+		<label index="roles">Улоге</label>
 		<label index="role">Улога</label>
 		<label index="role.new">Нова улога</label>
 		<label index="role.attr.persons">Члановиц улоге</label>
 		<label index="headlet.ajaxloader.label">Синхронизацију података са веб сервером</label>
-		<label index="headlet.about.label">О тодоѕу</label>
+		<label index="headlet.about.label">О todoyu</label>
 		<label index="unknown">Нема податка</label>
 		<label index="loaderBox.title">Наставља се за тренутак</label>
 	</labels>
