--- a/core/locale/static_country.xml
+++ b/core/locale/static_country.xml
@@ -1151,50 +1151,51 @@
 		<label index="SVK">Словачка</label>
 		<label index="SLE">Сијера Леоне</label>
 		<label index="SMR">Сан Марино</label>
-		<label index="SEN">Senegal</label>
-		<label index="SOM">Somalia</label>
-		<label index="SUR">Suriname</label>
-		<label index="STP">Sao-Tome und Principe</label>
-		<label index="SLV">El Salvador</label>
-		<label index="SYR">Syrien</label>
-		<label index="SWZ">Swasiland</label>
-		<label index="TCA">Turks- und Caicosinseln</label>
-		<label index="TCD">Tschad</label>
-		<label index="ATF">Französische Südliche Territorien</label>
-		<label index="TGO">Togo</label>
-		<label index="THA">Thailand</label>
-		<label index="TJK">Tadschikistan</label>
-		<label index="TKL">Tokelau</label>
-		<label index="TKM">Turkmenistan</label>
-		<label index="TUN">Tunesien</label>
-		<label index="TON">Tonga</label>
-		<label index="TLS">Osttimor</label>
-		<label index="TUR">Türkei</label>
-		<label index="TTO">Trinidad und Tobago</label>
-		<label index="TUV">Tuvalu</label>
-		<label index="TWN">Taiwan</label>
-		<label index="TZA">Tansania</label>
-		<label index="UKR">Ukraine</label>
-		<label index="UGA">Uganda</label>
-		<label index="USA">Vereinigte Staaten</label>
-		<label index="URY">Uruguay</label>
-		<label index="UZB">Usbekistan</label>
-		<label index="VAT">Vatikanstadt</label>
-		<label index="VCT">St. Vincent und die Grenadinen</label>
-		<label index="VEN">Venezuela</label>
-		<label index="VGB">Britische Jungferninseln</label>
-		<label index="VIR">Amerikanische Jungferninseln</label>
-		<label index="VNM">Vietnam</label>
-		<label index="VUT">Vanuatu</label>
-		<label index="WLF">Wallis und Futuna</label>
-		<label index="WSM">Samoa</label>
-		<label index="YEM">Jemen</label>
-		<label index="MYT">Mayotte</label>
-		<label index="ZAF">Süd-Afrika</label>
-		<label index="ZMB">Sambia</label>
-		<label index="ZWE">Simbabwe</label>
-		<label index="PSE">Palästinensische Territorien</label>
-		<label index="HMD">Heard und McDonaldinseln</label>
+		<label index="SEN">Сенегал</label>
+		<label index="SOM">Сомалија</label>
+		<label index="SUR">Суринам</label>
+		<label index="STP">Сао Томе и Принципе</label>
+		<label index="SLV">Салвадор</label>
+		<label index="SYR">Сирија</label>
+		<label index="SWZ">Свазиленд</label>
+		<label index="TCA">Туркс и Кајкос острва</label>
+		<label index="TCD">Чад</label>
+		<label index="ATF">Француске прекоморске територије</label>
+		<label index="TGO">Того</label>
+		<label index="THA">Тајланд</label>
+		<label index="TJK">Таџикистан</label>
+		<label index="TKL">Токелау</label>
+		<label index="TKM">Туркменистан</label>
+		<label index="TUN">Тунис</label>
+		<label index="TON">Тонга</label>
+		<label index="TLS">Источни Тимор</label>
+		<label index="TUR">Турска</label>
+		<label index="TTO">Тринидад и Тобаго</label>
+		<label index="TUV">Тринидад и Тобаго</label>
+		<label index="TWN">Тајван</label>
+		<label index="TZA">Танзанија</label>
+		<label index="UKR">Украјина</label>
+		<label index="UGA">Уганда</label>
+		<label index="USA">Сједињене Америчке Државе</label>
+		<label index="URY">Уругвај</label>
+		<label index="UZB">Узбекистан</label>
+		<label index="VAT">Ватикан</label>
+		<label index="VCT">Свети Винсент и Гренадини</label>
+		<label index="VEN">Венецуела</label>
+		<label index="VGB">Британска Девичанска острва</label>
+		<label index="VIR">Америчка Девичанска острва</label>
+		<label index="VNM">Вијетнам</label>
+		<label index="VUT">Вануату</label>
+		<label index="WLF">Валис и Футуна</label>
+		<label index="WSM">Самоа</label>
+		<label index="YEM">Јемен</label>
+		<label index="MYT">Мајот</label>
+		<label index="ZAF">Јужноафричка Република</label>
+		<label index="ZMB">Замбија</label>
+		<label index="ZWE">Зимбабве</label>
+		<label index="PSE">Палестинска Народна Самоуправа</label>
+		<label index="SCG">Србија и Црна Гора</label>
+		<label index="HMD">Острво Хеард и острва МцДоналд-а</label>
 	</labels>
 	<labels lang="ja_JP">
 		<label index="AND">アンドラ</label>
