--- a/core/locale/date.xml
+++ b/core/locale/date.xml
@@ -432,13 +432,13 @@
 		<label index="month.october">10月</label>
 		<label index="month.november">11月</label>
 		<label index="month.december">12月</label>
-		<label index="weekday.monday">月曜</label>
-		<label index="weekday.tuesday">火曜</label>
-		<label index="weekday.wednesday">水曜</label>
-		<label index="weekday.thursday">木曜</label>
-		<label index="weekday.friday">金曜</label>
-		<label index="weekday.saturday">土曜</label>
-		<label index="weekday.sunday">日曜</label>
+		<label index="weekday.monday">月曜日</label>
+		<label index="weekday.tuesday">火曜日</label>
+		<label index="weekday.wednesday">水曜日</label>
+		<label index="weekday.thursday">木曜日</label>
+		<label index="weekday.friday">金曜日</label>
+		<label index="weekday.saturday">土曜日</label>
+		<label index="weekday.sunday">日曜日</label>
 		<label index="weekday.mon">月</label>
 		<label index="weekday.tue">火</label>
 		<label index="weekday.wed">水</label>
