* Serbian label updates

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -553,7 +553,7 @@
 		<label index="rename">Преимењуј</label>
 		<label index="reset">Ресетуј</label>
 		<label index="update">Ажурирај</label>
-		<label index="search">Претражи</label>
+		<label index="search">Претрага</label>
 		<label index="back">Назад</label>
 		<label index="filter">Филтер</label>
 		<label index="type">Тип</label>
