* Serbian label updates

--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -467,6 +467,99 @@
 		<label index="slogan.line1">Děujeme že používáte todoyu</label>
 		<label index="slogan.line2">Věříme že se vám líbí.</label>
 	</labels>
+	<labels lang="sr_RS">
+		<label index="panelWidget.title.progress">Поступци инсталације</label>
+		<label index="type.install">todoyu инсталација</label>
+		<label index="type.update">todoyu ажурирање</label>
+		<label index="locale.title">Изабери језик инсталације</label>
+		<label index="locale.selectthislocale">Инсталирај todoyu на српски</label><!-- name of the current locale language -->
+		<label index="locale.text">Молимо изаберите језик за процес инсталације:</label>
+		<label index="license.eula">Кориснички споразум за todoyu</label>
+		<label index="license.lgpl">Следеће библиотеке трећих су лиценциране под ЛГПЛ в2.1</label>
+		<label index="license.title">todoyu лиценција корисника</label>
+		<label index="license.button">Слажем се, инсталирај todoyu сада</label>
+		<label index="license.text">Добро дошли код инсталације todoyu-а!</label>
+		<label index="servercheck.title">Провери сервер</label>
+		<label index="servercheck.button">Извршите конфигурацију базе податка</label>
+		<label index="servercheck.buttonRecheck">Поново проверите статус сервер-а</label>
+		<label index="servercheck.yourphpversion">Ваша верзија</label>
+		<label index="servercheck.yourphpversion.ok">ОК</label>
+		<label index="servercheck.yourphpversion.error">Пре ниска</label>
+		<label index="servercheck.writableCheck">Фацикла / Фајл преписљив</label>
+		<label index="servercheck.writable">преписљив</label>
+		<label index="servercheck.notWritable">НИЈЕ ПРЕПИСЉИВ</label>
+		<label index="servercheck.ready">Сервер је спреман за todoyu 2.0</label>
+		<label index="servercheck.notReady">Сервер НИЈЕ спреман за todoyu 2.0</label>
+		<label index="dbconnection.title">Намести сервер за базу податка</label>
+		<label index="dbconnection.button">Сачувај конфигурацију базе податка</label>
+		<label index="dbconnection.server">Сервер</label>
+		<label index="dbconnection.username">Корисничко име</label>
+		<label index="dbconnection.password">Лозинка</label>
+		<label index="dbconnection.text">Унеси податке за повезивање базе податка</label>
+		<label index="dbselect.title">Изабери базу податка</label>
+		<label index="dbselect.button">Сачувај подешавања базе податка</label>
+		<label index="dbselect.text">Молимо изаберите постојећу базу податка за todoyu, или креирајте нову</label>
+		<label index="dbselect.text.saved">Сачувана је веза базе податка</label>
+		<label index="dbselect.text.notCreated">Креирање нове базе податка не могуће</label>
+		<label index="dbselect.text.dbNameExists">База податка са овим именом већ постоји</label>
+		<label index="dbselect.selectDB">Изаберите базу податка</label>
+		<label index="dbselect.orCreateDB">Или креирајте нову:</label>
+		<label index="dbselect.dbEmpty">Празно</label>
+		<label index="dbselect.dbNotEmpty">Није празно</label>
+		<label index="dbselect.tables">Табеле</label>
+		<label index="dbselect.manual">Ако је признање базе податка који су на располагању на вашем сервер-у из сигурносних разлога искључена и горне поље за избор не садржава никакве опције, молимо унесите име потребне базе податка овде ручно:</label>
+		<label index="importtables.title">Импортирај табеле и податке</label>
+		<label index="importtables.button">Импортирај табеле и податке</label>
+		<label index="importtables.coretables">TODOYU СУШТИНА ТАБЕЛА БАЗЕ ПОДАТКА</label>
+		<label index="importtables.exttables">TODOYU ДОДАТАК ТАБЕЛА БАЗЕ ПОДАТКА</label>
+		<label index="importtables.text">Импортирај основне табеле todoyu-а</label>
+		<label index="systemconfig.title">Подешавања система todoyu</label>
+		<label index="systemconfig.button">Сачувајте подешавања система</label>
+		<label index="systemconfig.name">Име система</label>
+		<label index="systemconfig.email">Е-маил система</label>
+		<label index="systemconfig.language">Језик</label>
+		<label index="systemconfig.locale">Језик (Земља)</label>
+		<label index="systemconfig.timezone">Временска зона</label>
+		<label index="systemconfig.text">Вршавање подешавања система todoyu</label>
+		<label index="systemconfig.text.error">Молимо наведите име система и е-маил</label>
+		<label index="adminaccount.title">Направите налог администратора</label>
+		<label index="adminaccount.email">Е-маил администратора</label>
+		<label index="adminaccount.button">Направити налог администратора</label>
+		<label index="adminaccount.username">Корисничко име</label>
+		<label index="adminaccount.password">Лозинка</label>
+		<label index="adminaccount.repeatPassword">Поновите лозинку</label>
+		<label index="adminaccount.passwordHint">најмање пет знакова</label>
+		<label index="adminaccount.text">Молимо унесите податке за налог администратора</label>
+		<label index="adminaccount.companyname">Име предузећа</label>
+		<label index="adminaccount.adminfirstname">Име администратора</label>
+		<label index="adminaccount.adminlastname">Презиме администратора</label>
+		<label index="adminaccount.error">Молимо проверите податке налога</label>
+		<label index="importdemodata.title">Импоритрај податке за рример</label>
+		<label index="importdemodata.checkboxlabel">Импортирај податке за пример</label>
+		<label index="importdemodata.button">Даље</label>
+		<label index="importdemodata.text">Да би одма после пријаве почели са тестирањем, можете да импортирате податке као примере. Без тих податка имате чисту (али и празну) инсталацију, коју сами можете да попуните са подацима.</label>
+		<label index="importdemodata.contains">Садржава: Пројекте, задатке, адресе, шредузећа, коментаре, повратне информације, улоге система, врсте посла, филтере и дањне податке.</label>
+		<label index="finish.title">Завршавајте инсталацију</label>
+		<label index="finish.text">Инсталација завршена</label>
+		<label index="finish.note">Можете сад да се пријавите. Следеци корак ће трајати неколико секунди (зависи од васег ЦПУ-а), пошто систем саставља фајлове, припрема каширање, припрема фајлове и врши даљне припреме.</label>
+		<label index="finish.button">Деактивирај инсталер и настави са пријавом</label>
+		<label index="update.title">Ажурирај todoyu</label>
+		<label index="update.button">Покрените ажурирање</label>
+		<label index="update.info">Извршите измене на бази податка на основу присутној верзији и ажурирајте је са конфигурацијом фајла</label>
+		<label index="updatetocurrentversion.title">Ажурирајте базу податка</label>
+		<label index="updatetocurrentversion.button">Вршити измене на бази податка</label>
+		<label index="updatetocurrentversion.button.noupdates">Без ажурирања, даље</label>
+		<label index="updatetocurrentversion.noupdates">Ваша база податка је на најновијем статусу. Ажурирање није потребно.</label>
+		<label index="updatetocurrentversion.updates">Ваша база податка мора да буде ажурирана са следецим изменама.</label>
+		<label index="updatetocurrentversion.newTables">Нова табела</label>
+		<label index="updatetocurrentversion.newColumns">Нове колоне</label>
+		<label index="updatetocurrentversion.changedColumns">Измењене колоне</label>
+		<label index="updatetocurrentversion.missingKeys">Недостају индекси табеле</label>
+		<label index="finishupdate.title">Завршавајте ажурирање</label>
+		<label index="finishupdate.text">Инсталатер је ажурирао инсталацију todoyu-а</label>
+		<label index="slogan.line1">Немојте причати о todoyu</label>
+		<label index="slogan.line2">Користите га.</label>
+	</labels>
 	<labels lang="ja_JP">
 		<label index="panelWidget.title.progress">インストールの工程</label>
 		<label index="type.install">todoyu のインストール</label>
